# SpaceChess

./: CMakeLists.txt  README.md  SampleOutput.txt  SpaceChess.sln
SpaceChess/: Axis.h  Bishop.cpp  Bishop.h  Directions.h  Game.cpp  Piece.cpp  Piece.h  PieceShape.h  Position.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  SpaceChess.vcxproj  SpaceChess.vcxproj.filters  Utils.cpp  Utils.h
